# app/Models/ServicePrice.php
@@ -4,7 +4,42 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use OpenApi\Annotations as OA;
 
+/**
+ * @OA\Schema(
+ *   schema="ServicePrice",
+ *   @OA\Property(
+ *     property="id",
+ *     type="integer",
+ *     example="1",
+ *   ),
+ *   @OA\Property(
+ *     property="service_id",
+ *     type="string",
+ *     example="SERVICE_ID",
+ *   ),
+ *   @OA\Property(
+ *     property="amount",
+ *     type="integer",
+ *     example="100",
+ *   ),
+ *   @OA\Property(
+ *     property="setting",
+ *     type="array",
+ *     @OA\Items(
+ *       @OA\Property(
+ *         type="object",
+ *         @OA\Property(
+ *           property="key",
+ *           type="string",
+ *           example="value",
+ *         )
+ *       )
+ *     )
+ *   ),
+ * )
+ */
 class ServicePrice extends Model
 {
     /**
