# storage/api-docs/api-docs-peyvandtel.json
@@ -93,6 +93,165 @@
                 }
             }
         },
+        "/peyvandtel/servicePrices": {
+            "get": {
+                "tags": [
+                    "Service Prices"
+                ],
+                "summary": "ServicePrices index",
+                "description": "returns a paginated list of service prices. can be filtered",
+                "operationId": "PeyvandtelAdminServicePricesIndex",
+                "parameters": [
+                    {
+                        "name": "serviceId",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "users": {
+                                            "type": "object",
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/components/schemas/Pagination"
+                                                },
+                                                {
+                                                    "properties": {
+                                                        "data": {
+                                                            "type": "array",
+                                                            "items": {
+                                                                "$ref": "#/components/schemas/ServicePrice"
+                                                            }
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            ]
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UnauthorizedErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Service Prices"
+                ],
+                "summary": "ServicePrices store",
+                "description": "create a new price for an existing service.",
+                "operationId": "PeyvandtelAdminServicePricesStore",
+                "parameters": [
+                    {
+                        "name": "serviceId",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "amount",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Object containing an array of each service additional information",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "setting": {
+                                        "type": "array",
+                                        "items": {
+                                            "properties": {
+                                                "key": {
+                                                    "type": "string",
+                                                    "example": "each_second"
+                                                },
+                                                "value": {
+                                                    "type": "string",
+                                                    "example": 10
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Success. Created.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ValidationErrorResponse"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UnauthorizedErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/peyvandtel/services": {
             "get": {
                 "tags": [
@@ -892,6 +1051,40 @@
                     "has_credential": {
                         "type": "boolean",
                         "example": "false"
+                    }
+                },
+                "type": "object"
+            },
+            "ServicePrice": {
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": "1"
+                    },
+                    "service_id": {
+                        "type": "string",
+                        "example": "SERVICE_ID"
+                    },
+                    "amount": {
+                        "type": "integer",
+                        "example": "100"
+                    },
+                    "setting": {
+                        "type": "array",
+                        "items": {
+                            "properties": {
+                                "": {
+                                    "properties": {
+                                        "key": {
+                                            "type": "string",
+                                            "example": "value"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            },
+                            "type": "object"
+                        }
                     }
                 },
                 "type": "object"
